# Ai_Agent_for_e-commerce

./: README.md  app.py  pyproject.toml  run.bat  run.sh  快速使用.md  详细使用说明.md
config/: field_aliases.yaml  scoring_rules.yaml
data/samples/: amazon_top100_sample.csv
prompts/: product_report_prompt.md
src/: ai_reporter.py  data_cleaner.py  data_loader.py  db.py  field_mapper.py  market_insights.py  metrics.py  report_generator.py  risk_checker.py  scoring.py
tests/: test_ai_reporter.py  test_data_cleaner.py  test_data_loader.py  test_field_mapper.py  test_market_insights.py  test_metrics.py  test_risk_checker.py  test_scoring.py
