[project]
name = "aiagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
]
